# digital-control-systems

./: .gitignore  AGENT.md  README.md  pyproject.toml  temp_per_step_analysis.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Scripts/: arduino_lamp_pid_controller.ino  automatic_order_identification.py  backend_tui.py  compare_orders_validation.py  convert_impulse_txt_to_csv.py  run_backend_collimator.ps1  run_backend_control.ps1  run_box4_pipeline.ps1  run_impulse.py  run_impulse_closed_loop.ps1  run_impulse_pipeline.ps1  run_motor_pipeline.ps1  run_tui.ps1  simulate_impulse_closed_loop.py  validate_identified_model.py
docs/: marimo-guidelines.md
input/EstimacaoBox4/: controle.lvm  saida.lvm
input/ValidacaoBox4/: controle.lvm  saida.lvm
input/degrausMotorTQ/: referencia.lvm  saida.lvm
input/impulse_response/: README.md  degrau0p5_lampada_26032026.txt  degrau1_lampada_26032026.txt  identified_model.json  notebook_defaults.json  sample_control.csv  sample_impulse.csv  sample_output.csv  sample_thermal_step.txt  zoh_defaults.json  zoh_identified_model.json  zoh_per_step_analysis.json
notebooks/: 01_python_control_basics.ipynb  01_python_control_basics.py  02_sindy_from_sim.ipynb  02_sindy_from_sim.py  03_closed_loop_compare_backends.ipynb  03_closed_loop_compare_backends.py  04_impulse_response_analysis.py  05_zoh_two_file_identification.py  AGENT.md  automatic_order_identification.py
tests/: AGENT.md  test_backends.py  test_impulse_response.py  test_lqr.py  test_lti.py  test_pid.py  test_second_order.py  test_sindy.py  test_zoh_ident.py
(+53 files in other folders)
