[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "control-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "control>=0.10",
    "pysindy>=1.7",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "rich>=13.0",
    "polars>=0.20",
    "typer>=0.24.1",
]

[project.optional-dependencies]
collimator = [
    "pycollimator>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "marimo==0.22.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/control_lab"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N803", "N806", "N802", "E741"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
